--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "new-hire-test",
   "version": "1.0.0",
   "description": "- Setup a database / data store to house the json data provided (labels, artists, releases)  - Using a data processing implementation, remove any existing duplicates before inserting them into your data repository. - Create a POST route that validates and saves incoming data  - Create a GET route that can retrieve and return artist release data based on the following parameters:     - Return all artist data     - Return a single artist by name or ID     - Return multiple artists by names or ID's     - Filter by \"album\" or \"single\"     - Filter by label id     - Filter by UPC",
-  "main": "index.js",
+  "main": "./src/index.js",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -15,9 +15,9 @@
     "nodemon": "^2.0.7"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "test": "echo \"Error: no test specified\" && exit 1",    
+    "start": "node -r esm src/index.js",
+    "dev": "nodemon -r esm src/index.js"
   },
   "repository": {
     "type": "git",
