--- a/package.json
+++ b/package.json
@@ -14,12 +14,19 @@
   },
   "devDependencies": {
     "esm": "^3.2.25",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "eslint": "^7.5.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-import": "^2.22.0",
+    "prettier": "^2.0.5"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node -r esm src/index.js",
-    "dev": "nodemon -r esm src/index.js"
+    "dev": "nodemon -r esm src/index.js",
+    "lint": "eslint --fix src"
   },
   "repository": {
     "type": "git",
